# crow

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  moderate.yml
crow-cli/: Cargo.toml
crow-cli/src/: lib.rs  main.rs
crow-cli/templates/: crow.toml.tera
crow-core/: Cargo.toml
crow-core/src/: config.rs  lib.rs  utils.rs
crow-core/src/build_system/: builder.rs  cache.rs  dependency.rs  git_manager.rs  mod.rs  toolchain.rs
crow-core/src/build_system/builder/: mod.rs
crow-core/src/build_system/builder/hooks/: executor.rs  mod.rs
crow-core/src/build_system/builder/incremental/: cache.rs  mod.rs
crow-core/src/build_system/dependency/: mod.rs  resolver.rs
crow-core/src/build_system/dependency/types/: cmake.rs  crow.rs  mod.rs
crow-core/src/build_system/incremental/: cache.rs  mod.rs
crow-core/src/build_system/manager/: git.rs
crow-core/src/build_system/toolchain/: mod.rs
crow-core/src/build_system/toolchain/flags/: mod.rs
crow-core/src/config/: mod.rs
crow-core/src/config/base/: config.rs  final_config.rs  mod.rs  package_config.rs
crow-core/src/config/dependency/: crow_dependency_build.rs  dependency.rs  mod.rs
crow-core/src/config/profile/: build_profile.rs  mod.rs
crow-core/src/config/toolchain/: mod.rs  toolchain_config.rs  toolchain_hooks.rs  toolchain_override.rs
crow-core/src/config/types/: build_system_type.rs  mod.rs  output_type.rs
crow-utils/: Cargo.toml
crow-utils/src/: environment.rs  (+2 more)
docs/: README.md  compilers.md  configuration.md  dependencies.md  environment.md  overview.md
examples/: README.md
(+22 files in other folders)
