[package]
name = "crow-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
glob = "0.3"
fs_extra = "1.3"
shlex = "1.1"
threadpool = "1.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
dirs = "6.0"
serde_json = "1.0.140"
crow-utils = { path = "../crow-utils" }